--- a/src/app/pages/landing-screen/landing-screen.component.html
+++ b/src/app/pages/landing-screen/landing-screen.component.html
@@ -1,4 +1,5 @@
 <div class="landing-page text-center">
     <p>Welcome to Rental Management System</p>
+    <p>To find categories</p>
     <p>Select Location</p>
 </div>
